--- a/index.html
+++ b/index.html
@@ -53,8 +53,22 @@
                             <li class="nav-item">
                                 <a class="nav-link agrandar" href="pages/nosotros.html">Nosotros</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link agrandar" href="pages/servicios.html">Servicios</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle agrandar" href="#"
+                                    id="navbarDropdown" role ="button" data-bs-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                    Servicios
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="pages/servicios.html#limpieza">Limpieza</a>
+                                    <a class="dropdown-item" href="pages/servicios.html#resina">Resina</a>
+                                    <a class="dropdown-item" href="pages/servicios.html#coronas">Coronas</a>
+                                    <a class="dropdown-item" href="pages/servicios.html#endodoncia">Endodoncia</a>
+                                    <a class="dropdown-item" href="pages/servicios.html#blanqueamiento">Blanqueamiento</a>
+                                    <a class="dropdown-item" href="pages/servicios.html#periodoncia">Periodoncia</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="pages/servicios.html">Todos</a>
+                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link agrandar" href="pages/blog.html">Blog</a>
