--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -50,8 +50,22 @@
                             <li class="nav-item active">
                                 <a class="nav-link agrandar" href="./nosotros.html">Nosotros</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link agrandar" href="./servicios.html">Servicios</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle agrandar" href="#"
+                                    id="navbarDropdown" role ="button" data-bs-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                    Servicios
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="./servicios.html#limpieza">Limpieza</a>
+                                    <a class="dropdown-item" href="./servicios.html#resina">Resina</a>
+                                    <a class="dropdown-item" href="./servicios.html#coronas">Coronas</a>
+                                    <a class="dropdown-item" href="./servicios.html#endodoncia">Endodoncia</a>
+                                    <a class="dropdown-item" href="./servicios.html#blanqueamiento">Blanqueamiento</a>
+                                    <a class="dropdown-item" href="./servicios.html#periodoncia">Periodoncia</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="./servicios.html">Todos</a>
+                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link agrandar" href="./blog.html">Blog</a>
