--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="../css/main.css">
     <!--Fin Liga CSS-->
 
+    <!--Inicio Scrip Iconos-->
+    <script src="https://kit.fontawesome.com/6b1768eb67.js" crossorigin="anonymous"></script>
+    <!--Fin Scrip Iconos-->
+
     <!--Inicio Liga Favicon-->
     <link rel="icon" href="../assets/images/icon.ico">
     <!--Fin Liga Favicon-->
@@ -291,16 +295,30 @@
     </main>
 
     <!--Boton de Whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
 
     <!--Footer-->
     <div class="container-fluid">
         <footer class="row footerBg paddingTB">
             <div class="col-lg-6 col-xs-12">
-                <p>Odontopediatría Manzo</p>
+                <p class="centrado">Síguenos en nuestras redes:</p>
             </div>
-            <div class="col-lg-6 col-xs-12">
-                <p>2024 Todos los derechos reservados</p>
+
+            <div class="col-lg-6 col-xs-12 redes">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
+                    <i class="fa-brands fa-facebook icon"></i>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <i class="fa-brands fa-instagram icon"></i>
+                </a>
+                <a href="https://www.tiktok.com/es/" target="_blank">
+                    <i class="fa-brands fa-tiktok icon"></i>
+                </a>
+                <a href="https://twitter.com/?lang=es" target="_blank">
+                    <i class="fa-brands fa-square-x-twitter icon"></i>
+                </a>
             </div>
         </footer>
     </div>
