--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,6 +10,20 @@
     <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
     Dentista, Dentista para niños, niños, niñas, english spoken">
 
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="La Clinica de Odontopediatria Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Odontopediatría Manzo" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://eriagui.github.io/PF_Aguilar/" />
+    <meta property="og:image" content="./assets/images/icon.ico" />
+    <meta property="og:description" content="La Clinica de Odontopediatria Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México" />
+
     <title>Blog</title>
 
     <!--Link CSS de Bootstrap descargado-->
