--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -104,7 +104,7 @@
                 <h1 class="text-center">Contacto</h1>
             </div>
 
-            <form method="post" name="FormContacto">
+            <form method="post" name="FormContacto" netlify>
 
                 <!--Nombre-->
                 <div class="row mb-3">
