--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -142,7 +142,7 @@
 
                 <!--Enviar-->
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary" value="Enviar" id="enviar">Enviar</button>
+                    <input type="submit" class="btn btn-primary" name="enviar" id="enviar"></input>
                 </div>
             </form>
         </section>
