--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -18,8 +18,8 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Odontopediatría Manzo" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://eriagui.github.io/PF_Aguilar/" />
-    <meta property="og:image" content="./assets/images/icon.ico" />
+    <meta property="og:url" content="https://odontopediatriamanzo.netlify.app/" />
+    <meta property="og:image" content="../assets/images/muelacepillo.jpeg" />
     <meta property="og:description" content="La Clinica de Odontopediatria Manzo se 
     especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
     Se encuentra en la Ciudad de Querétaro, México" />
