--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,16 +108,16 @@
 
                 <!--Nombre-->
                 <div class="row mb-3">
-                    <label class="col-2 col-form-label" for="nombre">Nombre</label>
-                    <div class="col-10">
+                    <label class="col-lg-2 col-xs-12 col-form-label" for="nombre">Nombre</label>
+                    <div class="col-lg-10 col-xs-12">
                         <input type="text" class="form-control" name="nombre">
                     </div>
                 </div>
 
                 <!--Email-->
                 <div class="row mb-3">
-                    <label class="col-2 col-form-label" for="email">E-mail</label>
-                    <div class="col-10">
+                    <label class="col-lg-2 col-xs-12 col-form-label" for="email">E-mail</label>
+                    <div class="col-lg-10 col-xs-12">
                         <input type="email" class="form-control" name="email">
                     </div>
                 </div>
@@ -125,16 +125,16 @@
 
                 <!--Telefono-->
                 <div class="row mb-3">
-                    <label class="col-2 col-form-label" for="telefono">Teléfono</label>
-                    <div class="col-10">
+                    <label class="col-lg-2 col-xs-12 col-form-label" for="telefono">Teléfono</label>
+                    <div class="col-lg-10 col-xs-12">
                         <input type="number" class="form-control" name="telefono">
                     </div>
                 </div>
 
                 <!--Mensaje-->
                 <div class="row mb-3">
-                    <label class="col-2 col-form-label" for="comentarios">Tu mensaje:</label>
-                    <div class="col-10">
+                    <label class="col-lg-2 col-xs-12 col-form-label" for="comentarios">Tu mensaje:</label>
+                    <div class="col-lg-10 col-xs-12">
                         <textarea name="comentarios" class="form-control" id="comentarios" cols="20"
                             rows="8"></textarea>
                     </div>
