--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <!--Footer-->
     <div class="container-fluid">
-        <footer class="row footerBg paddingTB">
+        <footer class="row">
             <div class="col-lg-6 col-xs-12">
                 <p class="centrado">Síguenos en nuestras redes:</p>
             </div>
