--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Odontopediatría Manzo" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://odontopediatriamanzo.netlify.app/" />
-    <meta property="og:image" content="./assets/images/logo.png" />
+    <meta property="og:image" content="./assets/images/logo.webp" />
     <meta property="og:description" content="La Clinica de Odontopediatría Manzo se 
     especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
     Se encuentra en la Ciudad de Querétaro, México" />
@@ -58,7 +58,7 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top Logo1" src="./assets/images/logo.png"
+                        <img class="d-inline-block align-top Logo1" src="./assets/images/logo.webp"
                             alt="Logo Clinica Manzo">
                         <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
                     </a>
@@ -108,12 +108,12 @@
         <div class="row">
             <!--Imagen-->
             <section class="col-lg-6 col-xs-12">
-                <img id="DentistaFeliz" src="./assets/images/nina.png" alt="Niña feliz en el dentista"
+                <img id="DentistaFeliz" src="./assets/images/nina.webp" alt="Niña feliz en el dentista"
                     class="img-fluid">
             </section>
             <!--Texto al lado de la imagen-->
             <section class="col-lg-6 col-xs-12 texto_home">
-                <h1 class=>¿Qué es la Odontopediatría?</h1>
+                <h1>¿Qué es la Odontopediatría?</h1>
                 <p>
                     La Odontopediatría es la especialidad de la Odontología que se enfoca en atender pacientes
                     <b>desde su nacimiento</b> hasta la edad adulta.
@@ -155,13 +155,13 @@
         </p>
 
         <p class="fs-3"> <strong>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</strong></p>
-        <a href="./pages/contacto.html">
+        <a href="./pages/contacto.html" aria-label="Click para agendar cita">
             <p class="animate__animated animate__pulse animate__infinite">Agenda tu cita</p>
         </a>
     </main>
 
     <!--Boton whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para contactar por whats">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -173,16 +173,16 @@
             </div>
 
             <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
                     <i class="fa-brands fa-facebook icon"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank">
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
                     <i class="fa-brands fa-instagram icon"></i>
                 </a>
-                <a href="https://www.tiktok.com/es/" target="_blank">
+                <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
                     <i class="fa-brands fa-tiktok icon"></i>
                 </a>
-                <a href="https://twitter.com/?lang=es" target="_blank">
+                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
                     <i class="fa-brands fa-square-x-twitter icon"></i>
                 </a>
             </div>
