--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Odontopediatría Manzo" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://odontopediatriamanzo.netlify.app/" />
-    <meta property="og:image" content="../assets/images/logo.png" />
+    <meta property="og:image" content="../assets/images/logo.webp" />
     <meta property="og:description" content="La Clinica de Odontopediatría Manzo se 
     especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
     Se encuentra en la Ciudad de Querétaro, México" />
@@ -52,7 +52,7 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.png"
+                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
                             alt="Logo Clinica Manzo">
                         <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
                     </a>
@@ -109,7 +109,7 @@
         <!--Seccion Daniel-->
         <div class="row align-items-center borde-abajo">
             <section class="col-lg-6 col-xs-12">
-                <img src="../assets/images/daniel.jpg" alt="Foto Odontologo Daniel Manzo"
+                <img src="../assets/images/daniel.webp" alt="Foto Odontologo Daniel Manzo"
                     class="img-fluid imagen--nosotros">
             </section>
             <section class="col-lg-6 col-xs-12 texto_home">
@@ -140,7 +140,7 @@
                 </ul>
             </section>
             <section class="col-lg-6 col-xs-12">
-                <img src="../assets/images/estefi.png" alt="Foto Odontologa Estefania"
+                <img src="../assets/images/estefi.webp" alt="Foto Odontologa Estefania"
                     class="img-fluid imagen--nosotros">
             </section>
         </div>
@@ -148,7 +148,7 @@
         <!--Seccion Juan-->
         <div class="row align-items-center">
             <section class="col-lg-6 col-xs-12">
-                <img src="../assets/images/juan.png" alt="Foto Odontologo Juan" class="img-fluid imagen--nosotros">
+                <img src="../assets/images/juan.webp" alt="Foto Odontologo Juan" class="img-fluid imagen--nosotros">
             </section>
             <section class="col-lg-6 col-xs-12 texto_home">
                 <h3>Doctor Juan Perez Chavez</h3>
@@ -165,7 +165,7 @@
     </main>
 
     <!--Boton Whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para contactar por Whats">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -177,16 +177,16 @@
             </div>
 
             <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
                     <i class="fa-brands fa-facebook icon"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank">
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
                     <i class="fa-brands fa-instagram icon"></i>
                 </a>
-                <a href="https://www.tiktok.com/es/" target="_blank">
+                <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
                     <i class="fa-brands fa-tiktok icon"></i>
                 </a>
-                <a href="https://twitter.com/?lang=es" target="_blank">
+                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
                     <i class="fa-brands fa-square-x-twitter icon"></i>
                 </a>
             </div>
