--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Odontopediatría Manzo" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://odontopediatriamanzo.netlify.app/" />
-    <meta property="og:image" content="../assets/images/logo.png" />
+    <meta property="og:image" content="../assets/images/logo.webp" />
     <meta property="og:description" content="La Clinica de Odontopediatría Manzo se 
     especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
     Se encuentra en la Ciudad de Querétaro, México" />
@@ -52,7 +52,7 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.png"
+                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
                             alt="Logo Clinica">
                         <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
                     </a>
@@ -117,7 +117,7 @@
             sarro y placa. Complementa con aplicación de flúor.
         </p>
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/limpieza.png" alt="Limpieza Dental">
+            <img class="imagen--servicios" src="../assets/images/limpieza.webp" alt="Limpieza Dental">
         </div>
 
         <h2 id="resina" class="padding-superior">Resina dental</h2>
@@ -139,7 +139,7 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/resina.png" alt="Resina Dental">
+            <img class="imagen--servicios" src="../assets/images/resina.webp" alt="Resina Dental">
         </div>
 
         <h2 id="coronas" class="padding-superior">Coronas dentales</h2>
@@ -159,7 +159,7 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/corona.jpg" alt="Corona Dental">
+            <img class="imagen--servicios" src="../assets/images/corona.webp" alt="Corona Dental">
         </div>
 
         <h2 id="endodoncia" class="padding-superior">Endodoncia</h2>
@@ -181,7 +181,7 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/endodoncia.jpg" alt="Endodoncia">
+            <img class="imagen--servicios" src="../assets/images/endodoncia.webp" alt="Endodoncia">
         </div>
 
         <h2 id="blanqueamiento" class="padding-superior">Blanqueamiento</h2>
@@ -193,7 +193,7 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/blanqueamiento.png" alt="Blanqueamiento
+            <img class="imagen--servicios" src="../assets/images/blanqueamiento.webp" alt="Blanqueamiento
             Dental">
         </div>
 
@@ -209,12 +209,12 @@
         </p>
 
         <div class="centrado">
-            <img class="imagen--servicios" src="../assets/images/periodoncia.jpeg" alt="Peridoncia">
+            <img class="imagen--servicios" src="../assets/images/periodoncia.webp" alt="Peridoncia">
         </div>
     </main>
 
     <!--Boton whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para ver contactar por Whats">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -226,16 +226,16 @@
             </div>
 
             <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
                     <i class="fa-brands fa-facebook icon"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank">
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
                     <i class="fa-brands fa-instagram icon"></i>
                 </a>
-                <a href="https://www.tiktok.com/es/" target="_blank">
+                <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
                     <i class="fa-brands fa-tiktok icon"></i>
                 </a>
-                <a href="https://twitter.com/?lang=es" target="_blank">
+                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
                     <i class="fa-brands fa-square-x-twitter icon"></i>
                 </a>
             </div>
