--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     Se encuentra en la Ciudad de Querétaro, México" />
 
 
-    <title>Odontopediatría Manzo</title>
+    <title>Clínica Odontopediatrica Manzo</title>
+    <link rel="canonical" href="https://odontopediatriamanzo.netlify.app/" />
 
     <!--Link CSS de Bootstrap descargado-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -59,8 +60,8 @@
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
                         <img class="d-inline-block align-top Logo1" src="./assets/images/logo.webp"
-                            alt="Logo Clinica Manzo">
-                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
+                            alt="Logo Clinica Manzo" title="Logo Clinica Manzo">
+                        <p class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></p>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -109,7 +110,7 @@
             <!--Imagen-->
             <section class="col-lg-6 col-xs-12">
                 <img id="DentistaFeliz" src="./assets/images/nina.webp" alt="Niña feliz en el dentista"
-                    class="img-fluid">
+                    class="img-fluid" title="Niña feliz en el dentista">
             </section>
             <!--Texto al lado de la imagen-->
             <section class="col-lg-6 col-xs-12 texto_home">
