--- a/pages/blog.html
+++ b/pages/blog.html
@@ -52,8 +52,8 @@
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
                         <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
-                            alt="Logo Clinica Manzo">
-                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
+                            alt="Logo Clinica Manzo" title="Logo Clinica Manzo">
+                        <p class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></p>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,7 +106,7 @@
             <div class="row paddingTB">
                 <section class="col-lg-3 col-xs-12">
                     <img id="Alineadores" src="../assets/images/alineadores.webp" alt="Alineadores Dentales"
-                        class="img-fluid">
+                        class="img-fluid" title="Alineadores Dentales">
                 </section>
                 <section class="col-lg-9 col-xs-12">
                     <h2>¿Soy candidato a alinear mis dientes con alineadores invisibles?</h2>
@@ -226,7 +226,7 @@
             <div class="row paddingTB  align-items-center">
                 <section class="col-lg-3 col-xs-12">
                     <img id="Blanqueamiento2" src="../assets/images/blanqueamiento2.webp" alt="Blanqueamiento Dental"
-                        class="img-fluid">
+                        class="img-fluid" title="Blanqueamiento Dental">
                 </section>
                 <section class="col-lg-9 col-xs-12">
                     <h2>5 señales de que tus dientes necesitan un blanqueamiento dental</h2>
