--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,8 +52,8 @@
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
                         <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
-                            alt="Logo Clinica Manzo">
-                        <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
+                            alt="Logo Clinica Manzo" title="Logo Clinica Manzo">
+                        <h2 class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></h2>
 
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
