--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -53,8 +53,8 @@
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
                         <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
-                            alt="Logo Clinica">
-                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
+                            alt="Logo Clinica" title="Logo Clinica">
+                        <p class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></p>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -117,7 +117,8 @@
             sarro y placa. Complementa con aplicación de flúor.
         </p>
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/limpieza.webp" alt="Limpieza Dental">
+            <img class="imagen--servicios" src="../assets/images/limpieza.webp" alt="Limpieza Dental"
+            title="Limpieza Dental">
         </div>
 
         <h2 id="resina" class="padding-superior">Resina dental</h2>
@@ -139,7 +140,8 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/resina.webp" alt="Resina Dental">
+            <img class="imagen--servicios" src="../assets/images/resina.webp" alt="Resina Dental"
+            title="Resina Dental">
         </div>
 
         <h2 id="coronas" class="padding-superior">Coronas dentales</h2>
@@ -159,7 +161,8 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/corona.webp" alt="Corona Dental">
+            <img class="imagen--servicios" src="../assets/images/corona.webp" alt="Corona Dental"
+            title="Corona Dental">
         </div>
 
         <h2 id="endodoncia" class="padding-superior">Endodoncia</h2>
@@ -181,7 +184,8 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/endodoncia.webp" alt="Endodoncia">
+            <img class="imagen--servicios" src="../assets/images/endodoncia.webp" alt="Endodoncia"
+            title="Endodoncia">
         </div>
 
         <h2 id="blanqueamiento" class="padding-superior">Blanqueamiento</h2>
@@ -194,7 +198,7 @@
 
         <div class="centrado borde-abajo">
             <img class="imagen--servicios" src="../assets/images/blanqueamiento.webp" alt="Blanqueamiento
-            Dental">
+            Dental" title="Blanqueamiento Dental">
         </div>
 
         <h2 id="periodoncia" class="padding-superior">Periodoncia</h2>
@@ -209,7 +213,8 @@
         </p>
 
         <div class="centrado">
-            <img class="imagen--servicios" src="../assets/images/periodoncia.webp" alt="Peridoncia">
+            <img class="imagen--servicios" src="../assets/images/periodoncia.webp" alt="Peridoncia"
+            title="Peridoncia">
         </div>
     </main>
 
