--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -53,8 +53,8 @@
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
                         <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
-                            alt="Logo Clinica Manzo">
-                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
+                            alt="Logo Clinica Manzo" title="Logo Clinica Manzo">
+                        <p class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></p>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,7 +110,7 @@
         <div class="row align-items-center borde-abajo">
             <section class="col-lg-6 col-xs-12">
                 <img src="../assets/images/daniel.webp" alt="Foto Odontologo Daniel Manzo"
-                    class="img-fluid imagen--nosotros">
+                    class="img-fluid imagen--nosotros" title="Foto Odontologo Daniel Manzo">
             </section>
             <section class="col-lg-6 col-xs-12 texto_home">
                 <h3>Doctor Daniel Manzo</h3>
@@ -141,14 +141,15 @@
             </section>
             <section class="col-lg-6 col-xs-12">
                 <img src="../assets/images/estefi.webp" alt="Foto Odontologa Estefania"
-                    class="img-fluid imagen--nosotros">
+                    class="img-fluid imagen--nosotros" title="Foto Odontologa Estefania">
             </section>
         </div>
 
         <!--Seccion Juan-->
         <div class="row align-items-center">
             <section class="col-lg-6 col-xs-12">
-                <img src="../assets/images/juan.webp" alt="Foto Odontologo Juan" class="img-fluid imagen--nosotros">
+                <img src="../assets/images/juan.webp" alt="Foto Odontologo Juan" class="img-fluid imagen--nosotros"
+                title="Foto Odontologo Juan">
             </section>
             <section class="col-lg-6 col-xs-12 texto_home">
                 <h3>Doctor Juan Perez Chavez</h3>
