--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     Se encuentra en la Ciudad de Querétaro, México" />
 
 
-    <title>Clínica Odontopediatrica Manzo</title>
+    <title>Clínica de Odontopediatría Manzo en Querétaro</title>
     <link rel="canonical" href="https://odontopediatriamanzo.netlify.app/" />
 
     <!--Link CSS de Bootstrap descargado-->
