--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
                     <a class="navbar-brand" href="#">
                         <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
                             alt="Logo Clinica Manzo" title="Logo Clinica Manzo">
-                        <h2 class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></h2>
+                        <p class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></p>
 
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
@@ -69,9 +69,8 @@
                                 <a class="nav-link agrandar" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle agrandar" href="#"
-                                    id="navbarDropdown" role ="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
+                                <a class="nav-link dropdown-toggle agrandar" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Servicios
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -149,7 +148,8 @@
     </main>
 
     <!--Boton de Whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para contactar por Whats">
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"
+        aria-label="Click para contactar por Whats">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -161,16 +161,19 @@
             </div>
 
             <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"
+                    aria-label="Click para ver Face de la compañía">
                     <i class="fa-brands fa-facebook icon"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
+                <a href="https://www.instagram.com/" target="_blank"
+                    aria-label="Click para ver Instagram de la compañía">
                     <i class="fa-brands fa-instagram icon"></i>
                 </a>
                 <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
                     <i class="fa-brands fa-tiktok icon"></i>
                 </a>
-                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
+                <a href="https://twitter.com/?lang=es" target="_blank"
+                    aria-label="Click para ver Twitter de la compañía">
                     <i class="fa-brands fa-square-x-twitter icon"></i>
                 </a>
             </div>
