--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -52,8 +52,8 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp"
-                            alt="Logo Clinica" title="Logo Clinica">
+                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.webp" alt="Logo Clinica"
+                            title="Logo Clinica">
                         <p class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></p>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
@@ -69,9 +69,8 @@
                                 <a class="nav-link agrandar" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle agrandar" href="#"
-                                    id="navbarDropdown" role ="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
+                                <a class="nav-link dropdown-toggle agrandar" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Servicios
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -118,7 +117,7 @@
         </p>
         <div class="centrado borde-abajo">
             <img class="imagen--servicios" src="../assets/images/limpieza.webp" alt="Limpieza Dental"
-            title="Limpieza Dental">
+                title="Limpieza Dental">
         </div>
 
         <h2 id="resina" class="padding-superior">Resina dental</h2>
@@ -140,8 +139,7 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/resina.webp" alt="Resina Dental"
-            title="Resina Dental">
+            <img class="imagen--servicios" src="../assets/images/resina.webp" alt="Resina Dental" title="Resina Dental">
         </div>
 
         <h2 id="coronas" class="padding-superior">Coronas dentales</h2>
@@ -161,8 +159,7 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/corona.webp" alt="Corona Dental"
-            title="Corona Dental">
+            <img class="imagen--servicios" src="../assets/images/corona.webp" alt="Corona Dental" title="Corona Dental">
         </div>
 
         <h2 id="endodoncia" class="padding-superior">Endodoncia</h2>
@@ -184,8 +181,7 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/endodoncia.webp" alt="Endodoncia"
-            title="Endodoncia">
+            <img class="imagen--servicios" src="../assets/images/endodoncia.webp" alt="Endodoncia" title="Endodoncia">
         </div>
 
         <h2 id="blanqueamiento" class="padding-superior">Blanqueamiento</h2>
@@ -213,13 +209,13 @@
         </p>
 
         <div class="centrado">
-            <img class="imagen--servicios" src="../assets/images/periodoncia.webp" alt="Peridoncia"
-            title="Peridoncia">
+            <img class="imagen--servicios" src="../assets/images/periodoncia.webp" alt="Peridoncia" title="Peridoncia">
         </div>
     </main>
 
     <!--Boton whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para ver contactar por Whats">
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"
+        aria-label="Click para ver contactar por Whats">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -231,16 +227,19 @@
             </div>
 
             <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"
+                    aria-label="Click para ver Face de la compañía">
                     <i class="fa-brands fa-facebook icon"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
+                <a href="https://www.instagram.com/" target="_blank"
+                    aria-label="Click para ver Instagram de la compañía">
                     <i class="fa-brands fa-instagram icon"></i>
                 </a>
                 <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
                     <i class="fa-brands fa-tiktok icon"></i>
                 </a>
-                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
+                <a href="https://twitter.com/?lang=es" target="_blank"
+                    aria-label="Click para ver Twitter de la compañía">
                     <i class="fa-brands fa-square-x-twitter icon"></i>
                 </a>
             </div>
