--- a/index.html
+++ b/index.html
@@ -2,196 +2,205 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="La Clinica de Odontopediatria Manzo se 
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="La Clinica de Odontopediatria Manzo se 
     especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
-    Se encuentra en la Ciudad de Querétaro, México">
-    <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
-    Dentista, Dentista para niños, niños, niñas, english spoken">
-    <meta property="og:image" content="./assets/images/icon.ico">
+    Se encuentra en la Ciudad de Querétaro, México" />
+  <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
+    Dentista, Dentista para niños, niños, niñas, english spoken" />
+  <meta property="og:image" content="./assets/images/icon.ico" />
 
-
-    <!-- Twitter Card data -->
-    <meta name="twitter:card" value="La Clinica de Odontopediatría Manzo se 
-    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
-    Se encuentra en la Ciudad de Querétaro, México">
-
-    <!-- Open Graph data -->
-    <meta property="og:title" content="Odontopediatría Manzo" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://odontopediatriamanzo.netlify.app/" />
-    <meta property="og:image" content="./assets/images/logo.webp" />
-    <meta property="og:description" content="La Clinica de Odontopediatría Manzo se 
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" value="La Clinica de Odontopediatría Manzo se 
     especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
     Se encuentra en la Ciudad de Querétaro, México" />
 
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Odontopediatría Manzo" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://odontopediatriamanzo.netlify.app/" />
+  <meta property="og:image" content="./assets/images/logo.webp" />
+  <meta property="og:description" content="La Clinica de Odontopediatría Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México" />
 
-    <title>Clínica de Odontopediatría Manzo en Querétaro</title>
-    <link rel="canonical" href="https://odontopediatriamanzo.netlify.app/" />
+  <title>Clínica de Odontopediatría Manzo en Querétaro</title>
+  <link rel="canonical" href="https://odontopediatriamanzo.netlify.app/" />
 
-    <!--Link CSS de Bootstrap descargado-->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <!--Fin Link CSS de Bootstrap descargado-->
+  <!--Link CSS de Bootstrap descargado-->
+  <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  <!--Fin Link CSS de Bootstrap descargado-->
 
-    <!--Inicia Liga CSS-->
-    <link rel="stylesheet" href="./css/main.css">
-    <!--Fin Liga CSS-->
+  <!--Inicia Liga CSS-->
+  <link rel="stylesheet" href="./css/main.css" />
+  <!--Fin Liga CSS-->
 
-    <!--Inicio Liga Animaciones-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <!--Fin Liga Animaciones-->
+  <!--Inicio Liga Animaciones-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!--Fin Liga Animaciones-->
 
-    <!--Inicio Scrip Iconos-->
-    <script src="https://kit.fontawesome.com/6b1768eb67.js" crossorigin="anonymous"></script>
-    <!--Fin Scrip Iconos-->
+  <!--Inicio Scrip Iconos-->
+  <script src="https://kit.fontawesome.com/6b1768eb67.js" crossorigin="anonymous"></script>
+  <!--Fin Scrip Iconos-->
 
-    <!--Inicio Liga Favicon-->
-    <link rel="icon" href="./assets/images/icon.ico">
-    <!--Fin Liga Favicon-->
+  <!--Inicio Liga Favicon-->
+  <link rel="icon" href="./assets/images/icon.ico" />
+  <!--Fin Liga Favicon-->
 </head>
 
 <body>
+  <!-- nav + logo -->
+  <header class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 col-xs-12">
+        <nav class="navbar py-0 navbar-expand-md navbar-light">
+          <a class="navbar-brand" href="#">
+            <img class="d-inline-block align-top Logo1" src="./assets/images/logo.webp" alt="Logo Clinica Manzo"
+              title="Logo Clinica Manzo" />
+            <p class="d-inline-block align-bottom">
+              <strong>Odontopediatría Manzo</strong>
+            </p>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav w-100 d-flex justify-content-end">
+              <li class="nav-item active">
+                <a class="nav-link agrandar" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link agrandar" href="pages/nosotros.html">
+                  Nosotros
+                </a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle agrandar" href="#" id="navbarDropdown" role="button"
+                  data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Servicios
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="pages/servicios.html#limpieza">Limpieza</a>
+                  <a class="dropdown-item" href="pages/servicios.html#resina">Resina</a>
+                  <a class="dropdown-item" href="pages/servicios.html#coronas">Coronas</a>
+                  <a class="dropdown-item" href="pages/servicios.html#endodoncia">Endodoncia</a>
+                  <a class="dropdown-item" href="pages/servicios.html#blanqueamiento">Blanqueamiento</a>
+                  <a class="dropdown-item" href="pages/servicios.html#periodoncia">Periodoncia</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="pages/servicios.html">Todos</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link agrandar" href="pages/blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link agrandar" href="pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
 
-    <!-- nav + logo -->
-    <header class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-xs-12">
-                <nav class="navbar py-0 navbar-expand-md navbar-light">
-                    <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top Logo1" src="./assets/images/logo.webp"
-                            alt="Logo Clinica Manzo" title="Logo Clinica Manzo">
-                        <p class="d-inline-block align-bottom"><strong>Odontopediatría Manzo</strong></p>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav w-100 d-flex justify-content-end">
-                            <li class="nav-item active">
-                                <a class="nav-link agrandar" href="index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link agrandar" href="pages/nosotros.html">Nosotros</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle agrandar" href="#"
-                                    id="navbarDropdown" role ="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
-                                    Servicios
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="pages/servicios.html#limpieza">Limpieza</a>
-                                    <a class="dropdown-item" href="pages/servicios.html#resina">Resina</a>
-                                    <a class="dropdown-item" href="pages/servicios.html#coronas">Coronas</a>
-                                    <a class="dropdown-item" href="pages/servicios.html#endodoncia">Endodoncia</a>
-                                    <a class="dropdown-item" href="pages/servicios.html#blanqueamiento">Blanqueamiento</a>
-                                    <a class="dropdown-item" href="pages/servicios.html#periodoncia">Periodoncia</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="pages/servicios.html">Todos</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link agrandar" href="pages/blog.html">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link agrandar" href="pages/contacto.html">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
-
-    <main class="container-fluid background">
-        <div class="row">
-            <!--Imagen-->
-            <section class="col-lg-6 col-xs-12">
-                <img id="DentistaFeliz" src="./assets/images/nina.webp" alt="Niña feliz en el dentista"
-                    class="img-fluid" title="Niña feliz en el dentista">
-            </section>
-            <!--Texto al lado de la imagen-->
-            <section class="col-lg-6 col-xs-12 texto_home">
-                <h1>¿Qué es la Odontopediatría?</h1>
-                <p>
-                    La Odontopediatría es la especialidad de la Odontología que se enfoca en atender pacientes
-                    <b>desde su nacimiento</b> hasta la edad adulta.
-                </p>
-
-                <h2>¿Por qué llevar a l@s niñ@s con un Odontopediatra?</h2>
-
-                <h3>Expertos en la salud dental de los niñ@s</h3>
-                <p>
-                    Un odontopediatra cuenta con una <b>licenciatura en Odontología general, seguida por una
-                        especialidad</b>
-                    en el campo de odontopediatría. Es decir, un odontopediatra cuenta con una <b>formación
-                        específica</b> para la prevención, el diagnóstico y el tratamiento
-                    de anomalías en el desarrollo bucodental del(a) <b>niñ@</b>, afecciones nacientes en dientes de
-                    leche y definitivos
-                    y malposiciones o maloclusiones dentarias.
-                </p>
-
-                <h3>Prevención de problemas dentales</h3>
-                <p>
-                    La prevención es el mejor tratamiento para conseguir una sonrisa sana y radiante. La <b>detección
-                        temprana
-                        de anomalías en el desarrollo óseo del(a) niñ@</b>, o de afecciones nacientes, es crucial para
-                    el futuro diagnóstico
-                    del pequeño. Desde la odontopediatría podemos <b>corregir a tiempo</b> problemas de salud dental
-                    para que l@s niñ@s
-                    no tenga que someterse en un futuro a una cirugía más compleja.
-                </p>
-            </section>
-        </div>
-
-        <!--Texto abajo de la imagen-->
-        <h3>Un espacio adaptado a ellos</h3>
+  <main class="container-fluid background">
+    <div class="row">
+      <!--Imagen-->
+      <section class="col-lg-6 col-xs-12">
+        <img id="DentistaFeliz" src="./assets/images/nina.webp" alt="Niña feliz en el dentista" class="img-fluid"
+          title="Niña feliz en el dentista" />
+      </section>
+      <!--Texto al lado de la imagen-->
+      <section class="col-lg-6 col-xs-12 texto_home">
+        <h1>¿Qué es la Odontopediatría?</h1>
         <p>
-            La adaptación de las instalacones, favorece que l@s niñ@s <b>pierdan el miedo</b> al dentista y
-            aprendan a
-            mantener su boca bien cuidada, a la vez que se diviertan jugando, coloreando y haciendo nuevos
-            amigos.
+          La Odontopediatría es la especialidad de la Odontología que se
+          enfoca en atender pacientes
+          <b>desde su nacimiento</b> hasta la edad adulta.
         </p>
 
-        <p class="fs-3"> <strong>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</strong></p>
-        <a href="./pages/contacto.html" aria-label="Click para agendar cita">
-            <p class="animate__animated animate__pulse animate__infinite">Agenda tu cita</p>
-        </a>
-    </main>
+        <h2>¿Por qué llevar a l@s niñ@s con un Odontopediatra?</h2>
 
-    <!--Boton whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para contactar por whats">
-        <i class="fa-brands fa-whatsapp"></i>
-    </a>
+        <h3>Expertos en la salud dental de los niñ@s</h3>
+        <p>
+          Un odontopediatra cuenta con una
+          <b>licenciatura en Odontología general, seguida por una
+            especialidad</b>
+          en el campo de odontopediatría. Es decir, un odontopediatra cuenta
+          con una <b>formación específica</b> para la prevención, el
+          diagnóstico y el tratamiento de anomalías en el desarrollo
+          bucodental del(a) <b>niñ@</b>, afecciones nacientes en dientes de
+          leche y definitivos y malposiciones o maloclusiones dentarias.
+        </p>
 
-    <!--Footer-->
-    <div class="container-fluid">
-        <footer class="row">
-            <div class="col-lg-6 col-xs-12">
-                <p class="centrado">Síguenos en nuestras redes:</p>
-            </div>
-
-            <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
-                    <i class="fa-brands fa-facebook icon"></i>
-                </a>
-                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
-                    <i class="fa-brands fa-instagram icon"></i>
-                </a>
-                <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
-                    <i class="fa-brands fa-tiktok icon"></i>
-                </a>
-                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
-                    <i class="fa-brands fa-square-x-twitter icon"></i>
-                </a>
-            </div>
-        </footer>
+        <h3>Prevención de problemas dentales</h3>
+        <p>
+          La prevención es el mejor tratamiento para conseguir una sonrisa
+          sana y radiante. La
+          <b>detección temprana de anomalías en el desarrollo óseo del(a)
+            niñ@</b>, o de afecciones nacientes, es crucial para el futuro diagnóstico
+          del pequeño. Desde la odontopediatría podemos
+          <b>corregir a tiempo</b> problemas de salud dental para que l@s
+          niñ@s no tenga que someterse en un futuro a una cirugía más
+          compleja.
+        </p>
+      </section>
     </div>
 
-    <!-- JS de Bootstrap descargado-->
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <!--Texto abajo de la imagen-->
+    <h3>Un espacio adaptado a ellos</h3>
+    <p>
+      La adaptación de las instalacones, favorece que l@s niñ@s
+      <b>pierdan el miedo</b> al dentista y aprendan a mantener su boca bien
+      cuidada, a la vez que se diviertan jugando, coloreando y haciendo nuevos
+      amigos.
+    </p>
+
+    <p class="fs-3">
+      <strong>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</strong>
+    </p>
+    <a href="./pages/contacto.html" aria-label="Click para agendar cita">
+      <p class="animate__animated animate__pulse animate__infinite">
+        Agenda tu cita
+      </p>
+    </a>
+  </main>
+
+  <!--Boton whats-->
+  <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"
+    aria-label="Click para contactar por whats">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
+
+  <!--Footer-->
+  <div class="container-fluid">
+    <footer class="row">
+      <div class="col-lg-6 col-xs-12">
+        <p class="centrado">Síguenos en nuestras redes:</p>
+      </div>
+
+      <div class="col-lg-6 col-xs-12 redes">
+        <a href="https://www.facebook.com/?locale=es_LA" target="_blank"
+          aria-label="Click para ver Face de la compañía">
+          <i class="fa-brands fa-facebook icon"></i>
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
+          <i class="fa-brands fa-instagram icon"></i>
+        </a>
+        <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
+          <i class="fa-brands fa-tiktok icon"></i>
+        </a>
+        <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
+          <i class="fa-brands fa-square-x-twitter icon"></i>
+        </a>
+      </div>
+    </footer>
+  </div>
+
+  <!-- JS de Bootstrap descargado-->
+  <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
