--- a/pages/blog.html
+++ b/pages/blog.html
@@ -68,9 +68,8 @@
                                 <a class="nav-link agrandar" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle agrandar" href="#"
-                                    id="navbarDropdown" role ="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
+                                <a class="nav-link dropdown-toggle agrandar" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Servicios
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -309,7 +308,8 @@
     </main>
 
     <!--Boton de Whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para contactar por Whats">
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"
+        aria-label="Click para contactar por Whats">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -321,16 +321,19 @@
             </div>
 
             <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"
+                    aria-label="Click para ver Face de la compañía">
                     <i class="fa-brands fa-facebook icon"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
+                <a href="https://www.instagram.com/" target="_blank"
+                    aria-label="Click para ver Instagram de la compañía">
                     <i class="fa-brands fa-instagram icon"></i>
                 </a>
                 <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
                     <i class="fa-brands fa-tiktok icon"></i>
                 </a>
-                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
+                <a href="https://twitter.com/?lang=es" target="_blank"
+                    aria-label="Click para ver Twitter de la compañía">
                     <i class="fa-brands fa-square-x-twitter icon"></i>
                 </a>
             </div>
