--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -69,9 +69,8 @@
                                 <a class="nav-link agrandar" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle agrandar" href="#"
-                                    id="navbarDropdown" role ="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
+                                <a class="nav-link dropdown-toggle agrandar" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Servicios
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -149,7 +148,7 @@
         <div class="row align-items-center">
             <section class="col-lg-6 col-xs-12">
                 <img src="../assets/images/juan.webp" alt="Foto Odontologo Juan" class="img-fluid imagen--nosotros"
-                title="Foto Odontologo Juan">
+                    title="Foto Odontologo Juan">
             </section>
             <section class="col-lg-6 col-xs-12 texto_home">
                 <h3>Doctor Juan Perez Chavez</h3>
@@ -166,7 +165,8 @@
     </main>
 
     <!--Boton Whats-->
-    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank" aria-label="Click para contactar por Whats">
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"
+        aria-label="Click para contactar por Whats">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -178,16 +178,19 @@
             </div>
 
             <div class="col-lg-6 col-xs-12 redes">
-                <a href="https://www.facebook.com/?locale=es_LA" target="_blank" aria-label="Click para ver Face de la compañía">
+                <a href="https://www.facebook.com/?locale=es_LA" target="_blank"
+                    aria-label="Click para ver Face de la compañía">
                     <i class="fa-brands fa-facebook icon"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank" aria-label="Click para ver Instagram de la compañía">
+                <a href="https://www.instagram.com/" target="_blank"
+                    aria-label="Click para ver Instagram de la compañía">
                     <i class="fa-brands fa-instagram icon"></i>
                 </a>
                 <a href="https://www.tiktok.com/es/" target="_blank" aria-label="Click para ver TikTok de la compañía">
                     <i class="fa-brands fa-tiktok icon"></i>
                 </a>
-                <a href="https://twitter.com/?lang=es" target="_blank" aria-label="Click para ver Twitter de la compañía">
+                <a href="https://twitter.com/?lang=es" target="_blank"
+                    aria-label="Click para ver Twitter de la compañía">
                     <i class="fa-brands fa-square-x-twitter icon"></i>
                 </a>
             </div>
